# DLO_Singularity_Mocap

./: README.md
src/: J_dual.npy  J_hat.npy  ibvs_controller.py  ibvs_controller_dual.py  ibvs_result_dual_xy_rz.npz  jacobian_estimator_code.py  jacobian_estimator_dual.py  jacobian_samples_dual_xy_rz.npz  jacobian_samples_xy_rz.npz  record_s_target.py  rod_perception_code.py  s0.npy  s_target.npy  u0.npy
src/qualisys_mocap_ros2/: CMakeLists.txt  package.xml
src/qualisys_mocap_ros2/config/: qualisys.yaml
src/qualisys_mocap_ros2/include/qualisys/: Markup.h
src/qualisys_mocap_ros2/include/qualisys_mocap_ros2/: qualisys_driver_all_bodies.hpp
src/qualisys_mocap_ros2/launch/: qualisys.launch.py
src/qualisys_mocap_ros2/src/: qualisys_driver_all_bodies.cpp  qualisys_node_all_bodies.cpp
